--- a/GuessTheHeroGame/Resources/layout/blackwidow.axml
+++ b/GuessTheHeroGame/Resources/layout/blackwidow.axml
@@ -2,6 +2,58 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    android:minWidth="25px"
+    android:minHeight="25px">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/relativeLayout1">
+        <TextView
+            android:text="user input"
+            android:id="@+id/txtUserInput"
+            android:layout_width="200dp"
+            android:layout_height="35dp"
+            android:layout_marginLeft="45dp"
+            android:layout_marginTop="7dp"
+            android:editable="true"
+            android:backgroundTint="#00000000" />
+        <Button
+            android:text="Enter"
+            android:id="@+id/btnEnter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/txtUserInput" />
+    </RelativeLayout>
+    <ImageView
+        android:src="@android:drawable/ic_menu_gallery"
+        android:layout_width="250dp"
+        android:layout_height="300dp"
+        android:id="@+id/imgHero"
+        android:layout_gravity="center"
+        android:background="@drawable/blankhero" />
+    <Button
+        android:text="Hint 1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnHintOne"
+        android:backgroundTint="#ff0000ff" />
+    <Button
+        android:text="Hint 2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnHintTwo"
+        android:backgroundTint="#ff0000ff" />
+    <Button
+        android:text="Hint 3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnHintThree"
+        android:backgroundTint="#ff0000ff" />
+    <Button
+        android:text="Give Up!"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnGiveUp"
+        android:backgroundTint="#ffff0000" />
 </LinearLayout>
