--- a/GuessTheHeroGame/Resources/layout/greenArrow.axml
+++ b/GuessTheHeroGame/Resources/layout/greenArrow.axml
@@ -13,7 +13,9 @@
             android:layout_width="200dp"
             android:layout_height="35dp"
             android:layout_marginLeft="45dp"
-            android:layout_marginTop="7dp" />
+            android:layout_marginTop="7dp"
+            android:editable="true"
+            android:backgroundTint="#00000000" />
         <Button
             android:text="Enter"
             android:id="@+id/btnEnter"
